--- a/dailyAccount/App.config
+++ b/dailyAccount/App.config
@@ -5,15 +5,15 @@
     </startup>
   
     <appSettings>
-    <add key="ConnectionString" value="Data Source=192.168.1.238;Initial Catalog=cacu;Persist Security Info=True;Charset=utf8;User ID=ysyh;Password=1qaz2ws3e" />
+    <add key="ConnectionString" value="Data Source=192.168.1.238;Initial Catalog=cacu_test;Persist Security Info=True;Charset=utf8;User ID=ysyh;Password=1qaz2ws3e" />
     <add key="GetIpUrl" value="http://1212.ip138.com/ic.asp" />
     <add key="ShowTestMatchButton" value="true" />
-    <add key="Account" value="毛帅"/>
-    <add key="Password" value="123456"/>
+    <add key="Account" value="qa"/>
+    <add key="Password" value="zcs860521"/>
   </appSettings>
   
 <system.data>
-    <DbProviderFactories>
+    <DbProviderFactories>   
       <remove invariant="MySql.Data.MySqlClient" />
       <add name="MySQL Data Provider" invariant="MySql.Data.MySqlClient" description=".Net Framework Data Provider for MySQL" type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data, Version=6.9.9.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />
     </DbProviderFactories>
