--- a/dailyAccount/dailyAccount.csproj
+++ b/dailyAccount/dailyAccount.csproj
@@ -76,6 +76,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Request.cs" />
+    <Compile Include="user.cs" />
     <EmbeddedResource Include="ChangePWD.resx">
       <DependentUpon>ChangePWD.cs</DependentUpon>
     </EmbeddedResource>
