--- a/dailyAccount/App.config
+++ b/dailyAccount/App.config
@@ -5,11 +5,11 @@
     </startup>
   
     <appSettings>
-    <add key="ConnectionString" value="Data Source=192.168.1.238;Initial Catalog=cacu_test;Persist Security Info=True;Charset=utf8;User ID=ysyh;Password=1qaz2ws3e" />
+    <add key="ConnectionString" value="Data Source=192.168.1.238;Initial Catalog=cacu;Persist Security Info=True;Charset=utf8;User ID=ysyh;Password=1qaz2ws3e" />
     <add key="GetIpUrl" value="http://1212.ip138.com/ic.asp" />
     <add key="ShowTestMatchButton" value="true" />
-    <add key="Account" value="qa"/>
-    <add key="Password" value="zcs860521"/>
+    <add key="Account" value=""/>
+    <add key="Password" value=""/>
   </appSettings>
   
 <system.data>
